--- a/architectch.css
+++ b/architectch.css
@@ -1,8 +1,113 @@
 /*  work sens font from Goolge fonts */
-
+/* shared style */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 * {
     font-family: "Open Sans", sans-serif;
+
+}
+.btn-primary{
+
+
+
+}
+
+
+/* header style */
+
+header{
+background-color:rgb(255, 144, 14, 0.10) ;
+padding: 70px;
+
+}
+
+.nav-title{
+font-size: 2.8rem;
+font-weight: 700;
+color: #131331;
+
+}
+
+nav{
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
+nav >ul{
+display: flex;
+
+}
+nav li{
+list-style: none;
+margin-right: 30px;
+font-weight: 500;
+font-size: 1rem;
+
+}
+nav li a{
+text-decoration: none;
+color:#424242 ;
+}
+
+/* banner style */
+
+
+
+.banner-content{
+text-align: center;
+max-width: 800px;
+margin: 0 auto;
+
+}
+
+
+.banner-title{
+font-size: 4rem;
+font-weight: 700;
+color: #131331;
+
+}
+
+.btn-priymary{
+border-radius: 8px;
+color: #FFF;
+font-size: 1.25rem;
+padding: 20px 25px;
+background-color: #ff900e;
+border: 0px;
+cursor: pointer;
+
+
+}
+
+.banner img{
+    margin-top: 20px;
+width: 100%;
+}
+
+/* responsive style  */
+/* mobile device */
+@media screen and (max-width:576px) {
+    header{
+
+padding:20px;
+
+    }
+
+nav{
+flex-direction: column;
+}
+}
+/* tablet or medium devices */
+
+@media screen and (min-width:576px) and (max-width:960px){
+    header{
+padding: 40px;
+
+    }
+    nav{
+flex-direction: column;
+
+    }
 
 }
