--- a/architectch.css
+++ b/architectch.css
@@ -117,7 +117,7 @@ font-size: 3rem;
 
 }
 
-.teams-content .Quick-list{
+.teams-content .Quick-list, .text-light-gray{
 color: #727277; ;
 font-weight:500 ;
 
@@ -163,12 +163,28 @@ margin-bottom: 10px;
 color: #727272;
 
 }
+/* sponsors style */
+
+.sponsors{
+text-align: center;
 
 
+}
+
+.sponsors-img-container{
+display: flex;
+justify-content: space-evenly;
+align-items: center;
+margin-top: 50px;
+gap: 30px;
+
+}
+
+.sponsors-img-container img{
+width: 165px;
 
 
-
-
+}
 
 
 
@@ -185,11 +201,38 @@ color: #727272;
 padding:20px;
 
     }
+.teams-content,  .facts-card-container{
+padding: 20px;
+padding: 20px;
 
-nav{
+}
+
+
+
+nav, .facts-card-container, .teams-container, .sponsors-img-container{
+  
 flex-direction: column;
 }
+.teams-img-container{
+
+    grid-template-columns: repeat(1,1fr);
 }
+
+.facts-card-container{
+
+gap:20px ;
+
+}
+
+
+
+}
+
+
+
+
+
+
 /* tablet or medium devices */
 
 @media screen and (min-width:576px) and (max-width:960px){
@@ -197,7 +240,7 @@ flex-direction: column;
 padding: 40px;
 
     }
-    nav{
+    nav, .sponsors-img-container, .teams-container{
 flex-direction: column;
 
     }
