--- a/architectch.css
+++ b/architectch.css
@@ -178,6 +178,7 @@ margin-left: 30px;
 
 
 /* facts section */
+
 .facts-card-container{
 display: flex;
 justify-content: space-evenly;
@@ -231,9 +232,19 @@ gap: 30px;
 .sponsors-img-container img{
 width: 165px;
 
-
 }
 
+/* footer style */
+.footer-title{
+background-color:rgb(255, 144, 14, 0.10) ;
+width: 1100px;
+margin: 100px auto ;
+padding: 20px;
+text-align: center;
+font-size: 1.2rem;
+    font-weight: 500;
+    color: #727277; ;
+}
 
 
 
@@ -276,10 +287,14 @@ flex-direction: column;
 }
 
 .facts-card-container{
-
 gap:20px ;
-
 }
+
+.footer-title{
+    width: 400px;
+    font-size:12px;
+    }
+
 
 
 
